syntax = "proto3";

package cometbft.services.pruning.v1;

import "cometbft/services/pruning/v1/pruning.proto";

// PruningService provides privileged access to specialized pruning
// functionality on the CometBFT node to help control node storage.
service PruningService {
  // SetBlockRetainHeightRequest indicates to the node that it can safely
  // prune all block data up to the specified retain height.
  //
  // The lower of this retain height and that set by the application in its
  // Commit response will be used by the node to determine which heights' data
  // can be pruned.
  rpc SetBlockRetainHeight(SetBlockRetainHeightRequest) returns (SetBlockRetainHeightResponse);

  // GetBlockRetainHeight returns information about the retain height
  // parameters used by the node to influence block retention/pruning.
  rpc GetBlockRetainHeight(GetBlockRetainHeightRequest) returns (GetBlockRetainHeightResponse);

  // SetBlockResultsRetainHeightRequest indicates to the node that it can
  // safely prune all block results data up to the specified height.
  //
  // The node will always store the block results for the latest height to
  // help facilitate crash recovery.
  rpc SetBlockResultsRetainHeight(SetBlockResultsRetainHeightRequest) returns (SetBlockResultsRetainHeightResponse);

  // GetBlockResultsRetainHeight returns information about the retain height
  // parameters used by the node to influence block results retention/pruning.
  rpc GetBlockResultsRetainHeight(GetBlockResultsRetainHeightRequest) returns (GetBlockResultsRetainHeightResponse);

  // SetTxIndexerRetainHeightRequest indicates to the node that it can safely
  // prune all tx indices up to the specified retain height.
  rpc SetTxIndexerRetainHeight(SetTxIndexerRetainHeightRequest) returns (SetTxIndexerRetainHeightResponse);

  // GetTxIndexerRetainHeight returns information about the retain height
  // parameters used by the node to influence TxIndexer pruning
  rpc GetTxIndexerRetainHeight(GetTxIndexerRetainHeightRequest) returns (GetTxIndexerRetainHeightResponse);

  // SetBlockIndexerRetainHeightRequest indicates to the node that it can safely
  // prune all block indices up to the specified retain height.
  rpc SetBlockIndexerRetainHeight(SetBlockIndexerRetainHeightRequest) returns (SetBlockIndexerRetainHeightResponse);

  // GetBlockIndexerRetainHeight returns information about the retain height
  // parameters used by the node to influence BlockIndexer pruning
  rpc GetBlockIndexerRetainHeight(GetBlockIndexerRetainHeightRequest) returns (GetBlockIndexerRetainHeightResponse);
}
